tests/snapshots/prompt_test__duration__bash_0.00001.snap
---
source: tests/prompt_test.rs
expression: output
---
\[[48;5;33;37m\] X \[[0m\]\[[100;38;5;33m\]\[[0m\]\[[100;37m\] $USER@$HOST \[[0m\]\[[44;90m\]\[[0m\]\[[44;30m\] ~ \[[0m\]\[[34m\]\[[0m\]\[[107G\]\[[37m\]\[[0m\]\[[47;90m\]  XX:XX:XX \[[0m\]
\[[47;32m\] ✓ \[[0m\]\[[48;5;242;37m\]\[[0m\]\[[48;5;242;37m\] 󰔛 10μs \[[0m\]\[[38;5;242m\]\[[0m\]
